<resources>
    <string name="app_name">IMAD_Exam</string>
    <string name="campsite_commander">Campsite Commander</string>
    <string name="main_screen">Main Screen</string>
    <string name="Main_Screen">Main Screen</string>
    <string name="add_gear">Add Gear</string>
    <string name="total_items_packed">Total Items packed</string>
    <string name="detailed_view">Detailed View</string>
    <string name="category">Category</string>
    <string name="comment_note">Comment/Note</string>
    <string name="quantity_of_items">Quantity of items</string>
    <string name="back_to_base">Back to Base</string>
    <string name="save_data">Save Data</string>
    <string name="total_items_use_when_all_data_is_entered">Total items(Use when all data is entered)</string>
</resources>